--- a/0.Simple_example_with_smmp.ipynb
+++ b/0.Simple_example_with_smmp.ipynb
@@ -199,75 +199,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import wget\n",
-    "# import tarfile\n",
-    "# import shutil\n",
-    "# import os\n",
-    "# import glob\n",
-    "# import splitfolders\n",
+    "import wget\n",
+    "import tarfile\n",
+    "import shutil\n",
+    "import os\n",
+    "import glob\n",
+    "import splitfolders\n",
     "\n",
-    "# def make_dir(img_path, delete=True):\n",
-    "#     import shutil, os\n",
-    "#     try:\n",
-    "#         if not os.path.exists(img_path):\n",
-    "#             os.makedirs(img_path)\n",
-    "#         else:\n",
-    "#             if delete:\n",
-    "#                 shutil.rmtree(img_path)\n",
-    "#     except OSError:\n",
-    "#         print(\"Error\")\n",
+    "def make_dir(img_path, delete=True):\n",
+    "    import shutil, os\n",
+    "    try:\n",
+    "        if not os.path.exists(img_path):\n",
+    "            os.makedirs(img_path)\n",
+    "        else:\n",
+    "            if delete:\n",
+    "                shutil.rmtree(img_path)\n",
+    "    except OSError:\n",
+    "        print(\"Error\")\n",
     "\n",
-    "# rawimg_path = 'raw_img'\n",
-    "# output_path = 'data'\n",
-    "# dataset_path = './dataset'\n",
+    "rawimg_path = 'raw_img'\n",
+    "output_path = 'data'\n",
+    "dataset_path = './dataset'\n",
     "\n",
-    "# make_dir(rawimg_path)\n",
-    "# make_dir(dataset_path)\n",
+    "make_dir(rawimg_path)\n",
+    "make_dir(dataset_path)\n",
     "\n",
-    "# if not (os.path.isfile(\"images.tar.gz\") and tarfile.is_tarfile(\"images.tar.gz\")):\n",
-    "#     wget.download('https://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz')\n",
-    "# tar = tarfile.open(\"images.tar.gz\")\n",
-    "# tar.extractall(path=rawimg_path)\n",
-    "# tar.close()\n",
+    "if not (os.path.isfile(\"images.tar.gz\") and tarfile.is_tarfile(\"images.tar.gz\")):\n",
+    "    wget.download('https://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz')\n",
+    "tar = tarfile.open(\"images.tar.gz\")\n",
+    "tar.extractall(path=rawimg_path)\n",
+    "tar.close()\n",
     "\n",
-    "# import cv2\n",
-    "# import numpy as np\n",
+    "import cv2\n",
+    "import numpy as np\n",
     "\n",
-    "# def checkImage(path):\n",
-    "# #     print(path)\n",
-    "#     try:\n",
-    "#         with open(path, 'rb') as f:\n",
-    "#             data = f.read()\n",
-    "#             f.seek(-2,2)\n",
-    "#             value = f.read()\n",
+    "def checkImage(path):\n",
+    "#     print(path)\n",
+    "    try:\n",
+    "        with open(path, 'rb') as f:\n",
+    "            data = f.read()\n",
+    "            f.seek(-2,2)\n",
+    "            value = f.read()\n",
     "\n",
-    "#         encoded_img = np.frombuffer(data, dtype = np.uint8)\n",
-    "#         img_cv = cv2.imdecode(encoded_img, cv2.IMREAD_COLOR)\n",
-    "# #         print(img_cv)\n",
-    "#         if img_cv.shape[0]>0 and value == b'\\xff\\xd9':\n",
-    "#             return True\n",
-    "#     except:\n",
-    "#         return False\n",
+    "        encoded_img = np.frombuffer(data, dtype = np.uint8)\n",
+    "        img_cv = cv2.imdecode(encoded_img, cv2.IMREAD_COLOR)\n",
+    "#         print(img_cv)\n",
+    "        if img_cv.shape[0]>0 and value == b'\\xff\\xd9':\n",
+    "            return True\n",
+    "    except:\n",
+    "        return False\n",
     "\n",
-    "# corrupt_img = ['Egyptian_Mau_14.jpg','Egyptian_Mau_139.jpg','Egyptian_Mau_145.jpg','Egyptian_Mau_156.jpg',\n",
-    "#                'Egyptian_Mau_167.jpg','Egyptian_Mau_177.jpg','Egyptian_Mau_186.jpg','Egyptian_Mau_191.jpg',\n",
-    "#                'Abyssinian_5.jpg','Abyssinian_34.jpg','chihuahua_121.jpg','beagle_116.jpg']\n",
+    "corrupt_img = ['Egyptian_Mau_14.jpg','Egyptian_Mau_139.jpg','Egyptian_Mau_145.jpg','Egyptian_Mau_156.jpg',\n",
+    "               'Egyptian_Mau_167.jpg','Egyptian_Mau_177.jpg','Egyptian_Mau_186.jpg','Egyptian_Mau_191.jpg',\n",
+    "               'Abyssinian_5.jpg','Abyssinian_34.jpg','chihuahua_121.jpg','beagle_116.jpg']\n",
     "\n",
-    "# file_dir = os.path.join(rawimg_path, 'images')\n",
-    "# output_dir = os.path.join(rawimg_path, output_path)\n",
+    "file_dir = os.path.join(rawimg_path, 'images')\n",
+    "output_dir = os.path.join(rawimg_path, output_path)\n",
     "\n",
-    "# for file_path in glob.glob(file_dir + \"/*\"):\n",
-    "#     filename = file_path.split(\"/\")[2]\n",
-    "#     if checkImage(file_path) and filename not in corrupt_img:\n",
-    "#         dir_name = filename.split(\"_\")\n",
-    "#         dir_name.pop()\n",
-    "#         dir_name = \"_\".join(dir_name)\n",
-    "#         dir_path = os.path.join(output_dir, dir_name)\n",
-    "#         make_dir(dir_path, False)\n",
-    "#         target_path = os.path.join(dir_path, filename)\n",
-    "#         shutil.copyfile(file_path, target_path)\n",
-    "#     else:\n",
-    "#         print(file_path)"
+    "for file_path in glob.glob(file_dir + \"/*\"):\n",
+    "    filename = file_path.split(\"/\")[2]\n",
+    "    if checkImage(file_path) and filename not in corrupt_img:\n",
+    "        dir_name = filename.split(\"_\")\n",
+    "        dir_name.pop()\n",
+    "        dir_name = \"_\".join(dir_name)\n",
+    "        dir_path = os.path.join(output_dir, dir_name)\n",
+    "        make_dir(dir_path, False)\n",
+    "        target_path = os.path.join(dir_path, filename)\n",
+    "        shutil.copyfile(file_path, target_path)\n",
+    "    else:\n",
+    "        print(file_path)"
    ]
   },
   {
@@ -276,13 +276,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# num = 0\n",
-    "# for file_path in glob.glob(output_dir + \"/*/*\"):\n",
-    "# #     print(file_path)\n",
-    "#     if not checkImage(file_path):\n",
-    "# #         print(file_path)\n",
-    "#         num += 1\n",
-    "# print(num)"
+    "num = 0\n",
+    "for file_path in glob.glob(output_dir + \"/*/*\"):\n",
+    "#     print(file_path)\n",
+    "    if not checkImage(file_path):\n",
+    "#         print(file_path)\n",
+    "        num += 1\n",
+    "print(num)"
    ]
   },
   {
@@ -291,10 +291,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# splitfolders.ratio(output_dir, output=dataset_path, seed=1337, ratio=(.8, .1, .1)) # default values\n",
-    "# inputs = 's3://{}/{}'.format(bucket, 'oxford_pet_dataset')\n",
-    "# !aws s3 rm $inputs --quiet --recursive\n",
-    "# !aws s3 cp ./dataset $inputs --quiet --recursive"
+    "splitfolders.ratio(output_dir, output=dataset_path, seed=1337, ratio=(.8, .1, .1)) # default values\n",
+    "inputs = 's3://{}/{}'.format(bucket, 'oxford_pet_dataset')\n",
+    "!aws s3 rm $inputs --quiet --recursive\n",
+    "!aws s3 cp ./dataset $inputs --quiet --recursive"
    ]
   },
   {
@@ -303,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = 's3://sagemaker-us-west-2-322537213286/oxford_pet_dataset'"
+    "# inputs = 's3://sagemaker-us-west-2-322537213286/oxford_pet_dataset'"
    ]
   },
   {
